<resources>
    <string name="app_name">Aviv Inventory</string>
    <string name="title_activity_item" translatable="false">ItemActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="info">Info</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="ok">OK</string>
    <string name="alertItemNotFind">Can\'t get the Item info related to the input code</string>
    <string name="weight">Weight</string>
    <string name="loading">Getting Data …</string>
    <string name="extra">Extra</string>
    <string name="grp">Group</string>
    <string name="department">Department</string>
    <string name="profit">Profit</string>
    <string name="discountSupplier">Supplier\'s discount</string>
    <string name="discountable">Discount posibility</string>
    <string name="bonus_discout">Bonus discount</string>
    <string name="bonus_count">Bonus count</string>
    <string name="supplier">Supplier</string>
    <string name="cost_brutto">Cost brutto</string>
    <string name="discountItem">Item discount</string>
    <string name="vat_sum">Vat</string>
    <string name="cost_netto">Cost netto</string>
    <string name="unit">Unit</string>
    <string name="bonus_base">Bonus base</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navHeaderTitle" translatable="false">Aviv Inventory</string>


    <string name="item_info">Item Info</string>
    <string name="inventory_counting">Inventory counting</string>
    <string name="status">Status</string>
    <string name="tools">Tools</string>


    <string name="search">Search</string>
    <string name="enter_code_here">Code</string>
    <string name="enter_name_here">Name</string>
    <string name="search_by">Search by</string>
    <string name="clear">Clear</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="alertClientConnectionError">The client host unreachable</string>
    <string name="alertPrivateWSConnectionError">The service is unreachable</string>
    <string name="waiting_for_result">Waiting For Results...</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_character_count">Invalid character\'s count</string>
    <string name="title_activity_item_edit">Settings</string>


    <string name="title_activity_item_update">Item details</string>
    <string name="saving">Saving...</string>
    <string name="get_info_error">Cant get init info</string>
    <string name="access_denied">Access denied</string>
    <string name="account_not_exists">The client is not signed up.</string>
    <string name="client_db_connection_error">The client DB connection error</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="authenticating">Authenticating…</string>
    <string name="exit">Exit</string>
    <string name="alertSessionClosed">The session closed</string>
    <string name="group">Group</string>
    <string name="socket_timeout" translatable="false">A timeout expired on a create connection. Please try later…</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="sales_chart">Current month %1s/today sales</string>
    <string name="init_items">Init items…</string>
    <string name="init_images">Init images…</string>
    <string name="init_image">Init image</string>
    <string name="sales_avg_chart">Clients/Avg client sum</string>
    <string name="sales_month_chart">This month sales (%1s)</string>
    <string name="promotions">Promotions</string>
    <string name="init_promo">init promotions</string>
    <string name="title_activity_status">Status</string>
    <string name="legendThisMonth">This Month</string>
    <string name="legendThisDay">Today</string>
    <string name="legendClients">Clients</string>
    <string name="legendDealsAvg">Client Avg</string>
    <string name="title_hr_avg">Workhour/Sales</string>
    <string name="title_hr_total">Workhour total</string>
    <string name="title_hr_first_entry">Workhour First Entry</string>
    <string name="legendWHTotal">Workhour total</string>
    <string name="legendHRSales">Sales per workhour</string>
    <string name="legendHRTotal">Shift employee count</string>
    <string name="legendHRCurrent">Current employee count</string>
    <string name="legendHRFirstShift">Shift Open Time</string>
    <string name="legendHRFirstDeal">Time of the first deal</string>
    <string name="statusHRActivity">HR activity</string>
    <string name="statusTerminalActivity">Terminals activity</string>
    <string name="statusSales">Sales</string>
    <string name="title_status_deals">Deals\' status</string>
    <string name="openDeals">Deals in process</string>
    <string name="request_camera_permission">This app needs camera permission.</string>
</resources>
