<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.support.android.designlibdemo.SearchByCodeFragment">


    <TextView
        android:id="@+id/titleSearchBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|top"
        android:layout_margin="20dp"
        android:text="@string/search_by"
        android:textColor="#000000"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/searchByCodeInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleSearchBy"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/search_margin">

        <EditText
            android:id="@+id/etSearchByCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_code_here"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/searchByNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchByCodeInputLayout"
        android:layout_margin="@dimen/search_margin">

        <EditText
            android:id="@+id/etSearchByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_here"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/searchByNameInputLayout"
        android:layout_margin="20dp"
        android:text="@string/search" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/searchByNameInputLayout"
        android:layout_margin="20dp"
        android:text="@string/clear" />

</RelativeLayout>
