<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aviv_pos.olgats.avivinventory.ItemChartActivity"
    tools:showIn="@layout/activity_item_chart">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/sales_chart"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/lblFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lblTitle"
            android:shadowColor="@color/colorSubTitle"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/start"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lblFromDate"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/lblFromDate"
            android:clickable="true"
            android:text="@string/from_date"
            android:textAlignment="viewEnd"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/lblToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lblFromDate"
            android:shadowColor="@color/colorSubTitle"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/end"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lblToDate"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tvFromDate"
            android:layout_toEndOf="@id/lblToDate"
            android:clickable="true"
            android:text="@string/to_date"
            android:textAlignment="viewEnd"
            android:textColor="@color/accent" />

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/salesChart"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lblToDate" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>