<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aviv_pos.olgats.avivinventory.ItemActivity"
    tools:showIn="@layout/activity_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <RelativeLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <!-- barcode -->
                <TextView
                    android:id="@+id/titleCode"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/titleInfo"
                    android:layout_below="@+id/titleInfo"
                    android:paddingTop="10dp"
                    android:shadowColor="#00ccff"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:singleLine="true"
                    android:text="@string/code" />

                <TextView
                    android:id="@+id/textBarcode"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/titleCode"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/titleInfo"
                    android:paddingTop="10dp"
                    android:singleLine="true" />

                <!-- name -->
                <TextView
                    android:id="@+id/titleName"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/titleInfo"
                    android:layout_below="@+id/titleCode"
                    android:shadowColor="#00ccff"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:singleLine="true"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textName"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/titleName"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/textBarcode" />

                <!-- Price -->

                <TextView
                    android:id="@+id/titlePrice"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/titleCode"
                    android:layout_below="@+id/titleName"
                    android:shadowColor="#00ccff"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:singleLine="true"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/textPrice"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/titlePrice"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/textName" />

                <!-- Weight -->

                <TextView
                    android:id="@+id/titleWeight"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/titleCode"
                    android:layout_below="@+id/titlePrice"
                    android:shadowColor="#00ccff"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:singleLine="true"
                    android:text="@string/weight" />

                <CheckBox
                    android:id="@+id/cbWeight"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/titleWeight"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/textPrice"
                    android:clickable="false" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <!-- Extra -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

            <RelativeLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleExtra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/extra"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"

                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvExtra"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/titleExtra" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

            <RelativeLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titlePromo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promotions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPromo"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/titlePromo" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
