<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aviv_pos.olgats.avivinventory.model.item.status.StatusHRFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/lblHRAvg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/title_hr_avg"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/statusHRAvgChart"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lblHRAvg"
            />
        <TextView
            android:id="@+id/lblHRTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/statusHRAvgChart"
            android:text="@string/title_hr_total"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />


        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/statusHRTotalChart"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lblHRTotal"
            />

        <TextView
            android:id="@+id/lblHREntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/statusHRTotalChart"
            android:text="@string/title_hr_first_entry"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />



        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/statusHREntryChart"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lblHREntry"
            />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
